# mlops-project1

./: .clinerules  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
conf/: config.yaml
conf/dataset/: default.yaml
conf/model/: default.yaml
docs/: Makefile  conf.py  index.rst  make.bat
models/: best_model.pkl
outputs/2026-04-25/06-28-35/.hydra/: hydra.yaml
outputs/2026-04-25/06-33-29/.hydra/: hydra.yaml
outputs/2026-04-25/06-35-23/.hydra/: config.yaml  hydra.yaml
src/models/: train_model.py
