[project]
name = "mlops-project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awscli>=1.44.86",
    "click>=8.3.3",
    "coverage>=7.13.5",
    "flake8>=7.3.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "python-dotenv>=0.5.1",
    "sphinx>=7.3.7",
]
